docs/api/qiskit/0.35/qiskit.opflow.primitive_ops.PauliSumOp.mdx
---
title: PauliSumOp (v0.35)
description: API reference for qiskit.opflow.primitive_ops.PauliSumOp in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.primitive_ops.PauliSumOp
---

# PauliSumOp

<Class id="qiskit.opflow.primitive_ops.PauliSumOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/opflow/primitive_ops/pauli_sum_op.py" signature="PauliSumOp(primitive, coeff=1.0, grouping_type='None')" modifiers="class">
  Bases: `qiskit.opflow.primitive_ops.primitive_op.PrimitiveOp`

  Class for Operators backed by Terra’s `SparsePauliOp` class.

  **Parameters**

  *   **primitive** (`SparsePauliOp`) – The SparsePauliOp which defines the behavior of the underlying function.
  *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the primitive.
  *   **grouping\_type** (`str`) – The type of grouping. If None, the operator is not grouped.

  **Raises**

  **TypeError** – invalid parameters.

  ## Methods Defined Here

  <span id="qiskit-opflow-primitive-ops-paulisumop-add" />

  ### add

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.add" signature="PauliSumOp.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.adjoint" signature="PauliSumOp.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    `PauliSumOp`

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-compose" />

  ### compose

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.compose" signature="PauliSumOp.compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** (`OperatorBase`) – The `OperatorBase` with which to compose self.
    *   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
    *   **front** (`bool`) – If front==True, return `other.compose(self)`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-equals" />

  ### equals

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.equals" signature="PauliSumOp.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-eval" />

  ### eval

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.eval" signature="PauliSumOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (`Union`\[`str`, `Dict`\[`str`, `complex`], `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Return type**

    `Union`\[`OperatorBase`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-exp-i" />

  ### exp\_i

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.exp_i" signature="PauliSumOp.exp_i()">
    Return a `CircuitOp` equivalent to e^-iH for this operator H.

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-from-list" />

  ### from\_list

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.from_list" signature="PauliSumOp.from_list(pauli_list, coeff=1.0)" modifiers="classmethod">
    Construct from a pauli\_list with the form \[(pauli\_str, coeffs)]

    **Parameters**

    *   **pauli\_list** (`List`\[`Tuple`\[`str`, `complex`]]) – A list of Tuple of pauli\_str and coefficient.
    *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the primitive.

    **Return type**

    `PauliSumOp`

    **Returns**

    The PauliSumOp constructed from the pauli\_list.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-is-hermitian" />

  ### is\_hermitian

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.is_hermitian" signature="PauliSumOp.is_hermitian()">
    Return True if the operator is hermitian.

    Returns: Boolean value
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-is-zero" />

  ### is\_zero

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.is_zero" signature="PauliSumOp.is_zero()">
    Return this operator is zero operator or not.

    **Return type**

    `bool`
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-matrix-iter" />

  ### matrix\_iter

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.matrix_iter" signature="PauliSumOp.matrix_iter(sparse=False)">
    Return a matrix representation iterator.

    This is a lazy iterator that converts each term in the PauliSumOp into a matrix as it is used. To convert to a single matrix use the [`to_matrix()`](qiskit.opflow.primitive_ops.PauliSumOp#to_matrix "qiskit.opflow.primitive_ops.PauliSumOp.to_matrix") method.

    **Parameters**

    **sparse** (*bool*) – optionally return sparse CSR matrices if True, otherwise return Numpy array matrices (Default: False)

    **Returns**

    matrix iterator object for the PauliSumOp.

    **Return type**

    MatrixIterator
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-mul" />

  ### mul

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.mul" signature="PauliSumOp.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`complex`, `ParameterExpression`]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-permute" />

  ### permute

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.permute" signature="PauliSumOp.permute(permutation)">
    Permutes the sequence of `PauliSumOp`.

    **Parameters**

    **permutation** (`List`\[`int`]) – A list defining where each Pauli should be permuted. The Pauli at index j of the primitive should be permuted to position permutation\[j].

    **Return type**

    `PauliSumOp`

    **Returns**

    A new PauliSumOp representing the permuted operator. For operator (X ^ Y ^ Z) and indices=\[1,2,4], it returns (X ^ I ^ Y ^ Z ^ I).

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.primitive_strings" signature="PauliSumOp.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.reduce" signature="PauliSumOp.reduce(atol=None, rtol=None)">
    Simplify the primitive `SparsePauliOp`.

    **Parameters**

    *   **atol** (`Optional`\[`float`]) – Absolute tolerance for checking if coefficients are zero (Default: 1e-8).
    *   **rtol** (`Optional`\[`float`]) – Relative tolerance for checking if coefficients are zero (Default: 1e-5).

    **Return type**

    `PauliSumOp`

    **Returns**

    The simplified `PauliSumOp`.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-tensor" />

  ### tensor

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.tensor" signature="PauliSumOp.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

    **Return type**

    `Union`\[`PauliSumOp`, `TensoredOp`]

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_instruction" signature="PauliSumOp.to_instruction()">
    Returns an `Instruction` equivalent to this Operator.

    **Return type**

    `Instruction`
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_matrix" signature="PauliSumOp.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-pauli-op" />

  ### to\_pauli\_op

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_pauli_op" signature="PauliSumOp.to_pauli_op(massive=False)">
    Returns a sum of `PauliOp` s equivalent to this Operator.

    **Return type**

    `Union`\[`PauliOp`, `SummedOp`]
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-spmatrix" />

  ### to\_spmatrix

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_spmatrix" signature="PauliSumOp.to_spmatrix()">
    Returns SciPy sparse matrix representation of the `PauliSumOp`.

    **Return type**

    `spmatrix`

    **Returns**

    CSR sparse matrix representation of the `PauliSumOp`.

    **Raises**

    **ValueError** – invalid parameters.
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.INDENTATION" attributeValue="'  '" />

  ### coeff

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.coeff">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]

    **Returns**

    The coefficient.
  </Attribute>

  ### coeffs

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.coeffs">
    Return the Pauli coefficients.
  </Attribute>

  ### grouping\_type

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.grouping_type">
    Type of Grouping

    **Type**

    Returns

    **Return type**

    `str`
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.parameters" />

  ### primitive

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.primitive" attributeTypeHint="qiskit.quantum_info.operators.symplectic.sparse_pauli_op.SparsePauliOp">
    The primitive defining the underlying function of the Operator.

    **Return type**

    `Union`\[`QuantumCircuit`, `Operator`, `Pauli`, `SparsePauliOp`, `OperatorBase`]

    **Returns**

    The primitive object.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.settings">
    Return operator settings.

    **Return type**

    `Dict`
  </Attribute>
</Class>

