docs/api/qiskit/0.43/qiskit.opflow.primitive_ops.PauliSumOp.mdx
---
title: PauliSumOp
description: API reference for qiskit.opflow.primitive_ops.PauliSumOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.primitive_ops.PauliSumOp
---

# PauliSumOp

<Class id="qiskit.opflow.primitive_ops.PauliSumOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/primitive_ops/pauli_sum_op.py" signature="PauliSumOp(*args, **kwargs)">
  Bases: [`PrimitiveOp`](qiskit.opflow.primitive_ops.PrimitiveOp "qiskit.opflow.primitive_ops.primitive_op.PrimitiveOp")

  Deprecated: Class for Operators backed by Terra’s `SparsePauliOp` class.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  **Parameters**

  *   **primitive** – The SparsePauliOp which defines the behavior of the underlying function.
  *   **coeff** – A coefficient multiplying the primitive.
  *   **grouping\_type** – The type of grouping. If None, the operator is not grouped.

  **Raises**

  **TypeError** – invalid parameters.

  ## Methods Defined Here

  <span id="qiskit-opflow-primitive-ops-paulisumop-add" />

  ### add

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.add" name="add" signature="PauliSumOp.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.adjoint" name="adjoint" signature="PauliSumOp.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.

    **Return type**

    [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-compose" />

  ### compose

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.compose" name="compose" signature="PauliSumOp.compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` with which to compose self.
    *   **permutation** (*List\[int] | None*) – `List[int]` which defines permutation on other operator.
    *   **front** (*bool*) – If front==True, return `other.compose(self)`.

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-equals" />

  ### equals

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.equals" name="equals" signature="PauliSumOp.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Returns**

    A bool equal to the equality of self and other.

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-eval" />

  ### eval

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.eval" name="eval" signature="PauliSumOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (*str | Dict\[str, complex] |* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector") *| None*) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | complex
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-exp-i" />

  ### exp\_i

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.exp_i" name="exp_i" signature="PauliSumOp.exp_i()">
    Return a `CircuitOp` equivalent to e^-iH for this operator H.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-from-list" />

  ### from\_list

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.from_list" name="from_list" signature="classmethod PauliSumOp.from_list(pauli_list, coeff=1.0, dtype=<class 'complex'>)">
    Construct from a pauli\_list with the form \[(pauli\_str, coeffs)]

    **Parameters**

    *   **pauli\_list** (*List\[Tuple\[str, complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*]]*) – A list of Tuple of pauli\_str and coefficient.
    *   **coeff** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – A coefficient multiplying the primitive.
    *   **dtype** (*type*) – The dtype to use to construct the internal SparsePauliOp. Defaults to `complex`.

    **Returns**

    The PauliSumOp constructed from the pauli\_list.

    **Return type**

    [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-is-hermitian" />

  ### is\_hermitian

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.is_hermitian" name="is_hermitian" signature="PauliSumOp.is_hermitian()">
    Return True if the operator is hermitian.

    Returns: Boolean value
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-is-zero" />

  ### is\_zero

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.is_zero" name="is_zero" signature="PauliSumOp.is_zero()">
    Return this operator is zero operator or not.

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-matrix-iter" />

  ### matrix\_iter

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.matrix_iter" name="matrix_iter" signature="PauliSumOp.matrix_iter(sparse=False)">
    Return a matrix representation iterator.

    This is a lazy iterator that converts each term in the PauliSumOp into a matrix as it is used. To convert to a single matrix use the [`to_matrix()`](qiskit.opflow.primitive_ops.PauliSumOp#to_matrix "qiskit.opflow.primitive_ops.PauliSumOp.to_matrix") method.

    **Parameters**

    **sparse** (*bool*) – optionally return sparse CSR matrices if True, otherwise return Numpy array matrices (Default: False)

    **Returns**

    matrix iterator object for the PauliSumOp.

    **Return type**

    MatrixIterator
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-mul" />

  ### mul

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.mul" name="mul" signature="PauliSumOp.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-permute" />

  ### permute

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.permute" name="permute" signature="PauliSumOp.permute(permutation)">
    Permutes the sequence of `PauliSumOp`.

    **Parameters**

    **permutation** (*List\[int]*) – A list defining where each Pauli should be permuted. The Pauli at index j of the primitive should be permuted to position permutation\[j].

    **Returns**

    A new PauliSumOp representing the permuted operator. For operator (X ^ Y ^ Z) and indices=\[1,2,4], it returns (X ^ I ^ Y ^ Z ^ I).

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.

    **Return type**

    [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.primitive_strings" name="primitive_strings" signature="PauliSumOp.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Returns**

    A set of strings describing the primitives contained within the Operator.

    **Return type**

    *Set*\[str]
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.reduce" name="reduce" signature="PauliSumOp.reduce(atol=None, rtol=None)">
    Simplify the primitive `SparsePauliOp`.

    **Parameters**

    *   **atol** (*float | None*) – Absolute tolerance for checking if coefficients are zero (Default: 1e-8).
    *   **rtol** (*float | None*) – Relative tolerance for checking if coefficients are zero (Default: 1e-5).

    **Returns**

    The simplified `PauliSumOp`.

    **Return type**

    [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-tensor" />

  ### tensor

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.tensor" name="tensor" signature="PauliSumOp.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.

    **Return type**

    [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.pauli_sum_op.PauliSumOp") | [*TensoredOp*](qiskit.opflow.list_ops.TensoredOp "qiskit.opflow.list_ops.tensored_op.TensoredOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_instruction" name="to_instruction" signature="PauliSumOp.to_instruction()">
    Returns an `Instruction` equivalent to this Operator.

    **Return type**

    [*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_matrix" name="to_matrix" signature="PauliSumOp.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-pauli-op" />

  ### to\_pauli\_op

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_pauli_op" name="to_pauli_op" signature="PauliSumOp.to_pauli_op(massive=False)">
    Returns a sum of `PauliOp` s equivalent to this Operator.

    **Return type**

    [*PauliOp*](qiskit.opflow.primitive_ops.PauliOp "qiskit.opflow.primitive_ops.pauli_op.PauliOp") | [*SummedOp*](qiskit.opflow.list_ops.SummedOp "qiskit.opflow.list_ops.summed_op.SummedOp")
  </Function>

  <span id="qiskit-opflow-primitive-ops-paulisumop-to-spmatrix" />

  ### to\_spmatrix

  <Function id="qiskit.opflow.primitive_ops.PauliSumOp.to_spmatrix" name="to_spmatrix" signature="PauliSumOp.to_spmatrix()">
    Returns SciPy sparse matrix representation of the `PauliSumOp`.

    **Returns**

    CSR sparse matrix representation of the `PauliSumOp`.

    **Raises**

    **ValueError** – invalid parameters.

    **Return type**

    *spmatrix*
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.INDENTATION" name="INDENTATION" attributeValue="= '  '" />

  ### coeff

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.coeff" name="coeff">
    The scalar coefficient multiplying the Operator.

    **Returns**

    The coefficient.
  </Attribute>

  ### coeffs

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.coeffs" name="coeffs">
    Return the Pauli coefficients.
  </Attribute>

  ### grouping\_type

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.grouping_type" name="grouping_type">
    Type of Grouping

    **Type**

    Returns
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.instance_id" name="instance_id">
    Return the unique instance id.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.num_qubits" name="num_qubits" />

  ### parameters

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.parameters" name="parameters" />

  ### primitive

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.primitive" name="primitive" attributeTypeHint="SparsePauliOp">
    The primitive defining the underlying function of the Operator.

    **Returns**

    The primitive object.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.primitive_ops.PauliSumOp.settings" name="settings">
    Return operator settings.
  </Attribute>
</Class>

